# Sagasmith-coc

./: .gitignore  INSTALL.md  LICENSE  README-en.md  README.md  pyproject.toml
docs/: SCENE_PARSING.md
src/sagasmith_coc/: __init__.py  cli.py  module_profile.py  runtime.py  system.py
src/sagasmith_coc/engine/: development.py
src/sagasmith_coc/engine/checks/: chase.py  combat.py  sanity.py  skill.py
src/sagasmith_coc/engine/dice/: rolls.py
tests/: test_cli.py  test_engine.py  test_module_profile.py
